# RAG_from_scratch

./: README.md  pyproject.toml
app/RAG_from_scratch_chains/: rag_from_scratch_10_and_11.ipynb  rag_from_scratch_12_to_14.ipynb  rag_from_scratch_15_to_18.ipynb  rag_from_scratch_1_to_4.ipynb  rag_from_scratch_5_to_9.ipynb
