[tool.poetry]
name = "RAG_from_scratch"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "<2"
python-dotenv = "^1.0.1"
langchain = "^0.2.0"
langchain-openai = "^0.1.7"
langchain-community = "^0.2.0"
tiktoken = "^0.7.0"
langchainhub = "^0.1.15"
chromadb = "^0.5.0"
bs4 = "^0.0.2"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
